# tauri-template

./: .env.example  .eslintrc.json  .gitignore  README.md  bun.lockb  index.html  package.json
.github/workflows/: build.yml
src/: index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: utils.rs  window.rs
src/hooks/: useConfig.tsx
src/lib/config/: config.ts  config_types.ts  defaultConfig.ts
src/pages/: IndexPage.tsx
